# secxxii_v2

./: README.md  docker-compose.yml  downloads  init.sql  pyproject.toml
app1/: .dockerignore  Dockerfile  auth_config.yml  pyproject.toml  secxxii_sqlite.db
app1/sql_scripts/: creating_tables.sql
app1/src/: auth.py  cadastro_clientes.py  calendar_service.py  check.py  comanda_to_doc.py  connectdb_sqlite.py  home.py  registros.py  servicos.py
app1/src/.streamlit/: config.toml
app2/: Dockerfile  auth_config.yml  pyproject.toml  requirements.txt
app2/src/: comandas.py
src/: agent.py  agent_state.py  database.py  hello.py
src/database_classes/: tables.py
